# engram

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ENGRAM_2.0_PLAN.md  ENGRAM_3.0_ARCHITECTURE.md  ENGRAM_4.0_ARCHITECTURE.md  README.md
.github/workflows/: ci.yml
crates/engram-bench/: Cargo.toml
crates/engram-bench/src/: main.rs
crates/engram-cli/: Cargo.toml
crates/engram-cli/src/: daemon.rs  lib.rs  main.rs  mcp.rs  v2.rs
crates/engram-cli/tests/: binary_benchmark.rs  integration_v2.rs  multimodal_test.rs  quantization_benchmark.rs  v2_integration.rs
crates/engram-core/: Cargo.toml
crates/engram-core/src/: error.rs  id.rs  lib.rs  types.rs
crates/engram-embed/: Cargo.toml
crates/engram-embed/src/: client.rs  document.rs  hybrid.rs  jina.rs  lib.rs  local.rs  multimodal.rs  types.rs
crates/engram-extract/: Cargo.toml
crates/engram-extract/src/: lib.rs  pipeline.rs
crates/engram-fts/: Cargo.toml
crates/engram-fts/src/: index.rs  lib.rs
crates/engram-fts/tests/: fts_tests.rs
crates/engram-graph/: Cargo.toml
crates/engram-graph/src/: lib.rs  ppr.rs  traversal.rs
crates/engram-graph/tests/: graph_tests.rs
crates/engram-mcp/: Cargo.toml
crates/engram-mcp/src/: main.rs
crates/engram-query/: Cargo.toml
crates/engram-query/src/: engine.rs  lib.rs  rrf.rs  tests.rs
crates/engram-query/tests/: query_tests.rs
crates/engram-store/: Cargo.toml
crates/engram-store/src/: cf.rs  delta.rs  lib.rs  store.rs
crates/engram-store/tests/: store_tests.rs
crates/engram-temporal/: Cargo.toml
crates/engram-temporal/src/: lib.rs  lifecycle.rs  temporal.rs
crates/engram-vector/: Cargo.toml
crates/engram-vector/src/: binary.rs  hnsw.rs  hybrid.rs  index.rs  kernel.rs  kernel_index.rs  lib.rs  simd.rs
crates/engram-vector/tests/: vector_tests.rs
crates/engram-watch/: Cargo.toml
crates/engram-watch/src/: lib.rs
crates/engram-workspace/: Cargo.toml
crates/engram-workspace/src/: lib.rs  workspace.rs
