[package]
name = "engram-embed"
version = "0.1.0"
edition = "2021"

[dependencies]
engram-core = { path = "../engram-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
parking_lot = { workspace = true }
# Local embeddings
fastembed = { workspace = true }
num_cpus = "1.16"
