[package]
name = "engram-fts"
version = "0.1.0"
edition = "2021"

[dependencies]
engram-core = { path = "../engram-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tantivy = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3"
