[package]
name = "engram-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
engram-core = { path = "../engram-core" }
engram-store = { path = "../engram-store" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
tempfile = "3"
