[package]
name = "engram-temporal"
version = "0.1.0"
edition = "2021"

[dependencies]
engram-core = { path = "../engram-core" }
engram-store = { path = "../engram-store" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
