[package]
name = "engram-vector"
version = "0.1.0"
edition = "2021"

[features]
default = ["hnsw", "kernel"]
hnsw = ["usearch"]
binary = ["memmap2"]
kernel = ["memmap2"]
flat = []

[dependencies]
engram-core = { path = "../engram-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
# HNSW vector search
usearch = { workspace = true, optional = true }
# Memory mapping for binary index
memmap2 = { version = "0.9", optional = true }

[dev-dependencies]
tempfile = "3"
engram-core = { path = "../engram-core" }
